--- a/public/thai-fruit.html
+++ b/public/thai-fruit.html
@@ -64,7 +64,6 @@
       font-size: 1.5rem;
     }
 
-    /* Style the link to look like a typical clickable link */
     li h2 a {
       color: #0645AD; 
       text-decoration: underline;
@@ -82,7 +81,7 @@
       width: 100%;
       height: 200px;
       object-fit: cover;
-      cursor: pointer; /* Now the image is obviously clickable */
+      cursor: pointer;
       transition: transform 0.3s ease, filter 0.3s ease;
     }
 
@@ -179,7 +178,7 @@
       </h2>
       <p>Location: Koh Samui</p>
       <img src="/durian.jpg" alt="Durian" onclick="showModal('/durian.jpg')" />
-      <img src="/durian2.jpg" alt="Durian-2" style="margin-top: 0.5rem;" onclick="showModal('/durian2.jpg')" />
+      <img src="/durian2.jpg" alt="Durian-2" onclick="showModal('/durian2.jpg')" />
     </li>
 
     <li>
@@ -190,7 +189,7 @@
       </h2>
       <p>Location: คลองศกแคมป์ (Klongsok Camp)</p>
       <img src="/jackfruit.jpg" alt="Jackfruit" onclick="showModal('/jackfruit.jpg')" />
-      <img src="/jackfruit2.jpg" alt="Jackfruit-2" style="margin-top: 0.5rem;" onclick="showModal('/jackfruit2.jpg')" />
+      <img src="/jackfruit2.jpg" alt="Jackfruit-2" onclick="showModal('/jackfruit2.jpg')" />
     </li>
   </ul>
 </main>
