--- a/public/thai-fruit.html
+++ b/public/thai-fruit.html
@@ -191,6 +191,27 @@
       <img src="/jackfruit.jpg" alt="Jackfruit" onclick="showModal('/jackfruit.jpg')" />
       <img src="/jackfruit2.jpg" alt="Jackfruit-2" onclick="showModal('/jackfruit2.jpg')" />
     </li>
+
+    <li>
+      <h2>
+        <a href="https://en.wikipedia.org/wiki/Jackfruit" target="_blank" rel="noopener">
+          Pandan
+        </a>
+      </h2>
+      <p>Location: Chiang Mai Night Market and คลองศกแคมป์ (Klongsok Camp)</p>
+      <img src="/pandan-bun.jpg" alt="Pandan-Bun" onclick="showModal('/pandan-fruit.jpg')" />
+      <img src="/pandan-kuih-tako-and-khanom-chan.jpg" alt="Pandan-Kuih-Tako-And-Khanom-Chan" onclick="showModal('/pandan-kuih-tako-and-khanom-chan.jpg')" />
+    </li>
+
+    <li>
+      <h2>
+        <a href="https://en.wikipedia.org/wiki/Longan" target="_blank" rel="noopener">
+          Longan (lam-yai)
+        </a>
+      </h2>
+      <p>Location: Wat Ta Khun Market</p>
+      <img src="/longan.jpg" alt="Longan" onclick="showModal('/longan.jpg')" />
+    </li>
   </ul>
 </main>
 
