--- a/public/thai-fruit.html
+++ b/public/thai-fruit.html
@@ -194,12 +194,12 @@
 
     <li>
       <h2>
-        <a href="https://en.wikipedia.org/wiki/Jackfruit" target="_blank" rel="noopener">
+        <a href="https://en.m.wikipedia.org/wiki/Pandanus_amaryllifolius" target="_blank" rel="noopener">
           Pandan
         </a>
       </h2>
       <p>Location: Chiang Mai Night Market and คลองศกแคมป์ (Klongsok Camp)</p>
-      <img src="/pandan-bun.jpg" alt="Pandan-Bun" onclick="showModal('/pandan-fruit.jpg')" />
+      <img src="/pandan-bun.jpg" alt="Pandan-Bun" onclick="showModal('/pandan-bun.jpg')" />
       <img src="/pandan-kuih-tako-and-khanom-chan.jpg" alt="Pandan-Kuih-Tako-And-Khanom-Chan" onclick="showModal('/pandan-kuih-tako-and-khanom-chan.jpg')" />
     </li>
 
