--- a/public/thai-fruit.html
+++ b/public/thai-fruit.html
@@ -163,11 +163,21 @@
     <li>
       <h2>
         <a href="https://en.wikipedia.org/wiki/Physalis_peruviana" target="_blank" rel="noopener">
-          Golden Gooseberry
+          Cape Gooseberry
         </a>
       </h2>
       <p>Location: Koh Samui</p>
-      <img src="/golden-gooseberry.jpg" alt="Golden Gooseberry" onclick="showModal('/golden-gooseberry.jpg')" />
+      <img src="/golden-gooseberry.jpg" alt="Cape Gooseberry" onclick="showModal('/golden-gooseberry.jpg')" />
+    </li>
+
+    <li>
+      <h2>
+        <a href="https://en.m.wikipedia.org/wiki/Pyrus_pyrifolia" target="_blank" rel="noopener">
+          Korean Pear
+        </a>
+      </h2>
+      <p>Location: Mahanak Market, Bangkok</p>
+      <img src="/korean-pear.jpg" alt="Korean Pear" onclick="showModal('/korean-pear.jpg')" />
     </li>
 
     <li>
