--- a/public/vscode-extensions.html
+++ b/public/vscode-extensions.html
@@ -21,10 +21,11 @@
         align-items: center;
       }
       fieldset {
-        border: 1px solid #e5e7eb;
-        border-radius: 0.375rem;
-        margin-bottom: 0.25rem;
-        padding: 0.25rem 0.25rem;
+          color: darkslateblue;
+          background-color: cornsilk;
+          border-radius: 0.1rem;
+          margin: 1.25rem 0;
+          padding: 0.25rem 0.25rem;
       }
       legend {
         padding: 0 0.25rem;
@@ -86,20 +87,6 @@
       </a>
    </h3>
 
-   <fieldset>
-      <legend>Essentials that are almost part of the editor</legend>
-      <ol>
-         <li>
-            <a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens" target="_blank">GitLens</a>
-            <span>-</span>Essential
-         </li>
-         <li>
-            <a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack" target="_blank">Remote Development</a>
-            <span>-</span>Connect to local/remote machines/containers
-         </li>
-      </ol>
-   </fieldset>
-
    <details>
       <summary>Builtin features you should know before you run looking for an extension</summary>
       <ol>
@@ -114,12 +101,36 @@
             </a>
          </li>
          <li>
+            <a href="https://code.visualstudio.com/updates/v1_97#_no-config-debug" target="_blank">
+               Python no-config debug from the terminal
+            </a>
+         </li>
+         <li>
+            <a href="https://code.visualstudio.com/updates/v1_97#_no-config-debug" target="_blank">
+               In-editor git blame
+            </a>
+         </li>
+         <li>
             <a href="https://code.visualstudio.com/updates/v1_89#_new-auto-indentation-setting" target="_blank">
                Python auto-indent settings
             </a>
          </li>
       </ol>
    </details>
+
+   <fieldset>
+      <legend>Essentials that are almost part of the editor</legend>
+      <ol>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens" target="_blank">GitLens</a>
+            <span>-</span>Essential
+         </li>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack" target="_blank">Remote Development</a>
+            <span>-</span>Connect to local/remote machines/containers
+         </li>
+      </ol>
+   </fieldset>
 
    <fieldset>
       <legend>General niceties</legend>
@@ -134,11 +145,11 @@
          </li>
          <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=alefragnani.Bookmarks" target="_blank">Bookmarks</a>
-            <span>-</span>JetBrains-like
+            <span>-</span>JetBrains-like bookmarks
          </li>
          <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=jakearl.search-editor-apply-changes" target="_blank">Search Editor Apply Changes</a>
-            <span>-</span>Emacs-style compile mode
+            <span>-</span>Emacs-style compile mode edit within search window
          </li>
          <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=naumovs.color-highlight" target="_blank">Color Highlight</a>
@@ -159,8 +170,12 @@
             <span>-</span>CSV/TSV highlighting
          </li>
          <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=Leonardo16.nvidia-gpu" target="_blank">Nvidia GPU usage</a>
+            <span>-</span><code>nvidia-smi</code> memory usage in status bar
+         </li>
+         <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=yardensachs.copy-python-path" target="_blank">Copy Python Path</a>
-            <span>-</span>Convenient path copying
+            <span>-</span>Convenient Python path copying
          </li>
          <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=styled-components.vscode-styled-components" target="_blank">Styled Components</a>
