--- a/public/vscode-extensions.html
+++ b/public/vscode-extensions.html
@@ -106,7 +106,7 @@
             </a>
          </li>
          <li>
-            <a href="https://code.visualstudio.com/updates/v1_97#_no-config-debug" target="_blank">
+            <a href="https://code.visualstudio.com/updates/v1_97#_git-blame-information" target="_blank">
                In-editor git blame
             </a>
          </li>
@@ -171,7 +171,7 @@
          </li>
          <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=Leonardo16.nvidia-gpu" target="_blank">Nvidia GPU usage</a>
-            <span>-</span><code>nvidia-smi</code> memory usage in status bar
+            <span>-</span> <code>nvidia-smi</code> memory usage in status bar
          </li>
          <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=yardensachs.copy-python-path" target="_blank">Copy Python Path</a>
