--- a/public/vscode-extensions.html
+++ b/public/vscode-extensions.html
@@ -140,12 +140,16 @@
             <span>-</span>Track numerous symbols easily
          </li>
          <li>
-            <a href="https://marketplace.visualstudio.com/items?itemName=usernamehw.errorlens" target="_blank">Error Lens</a>
-            <span>-</span>Inline error messaging
-         </li>
-         <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=alefragnani.Bookmarks" target="_blank">Bookmarks</a>
             <span>-</span>JetBrains-like bookmarks
+         </li>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=pejmannikram.vscode-auto-scroll" target="_blank">AutoScroll</a>
+            <span>-</span>Auto-scroll files, as if running `tail -f`
+         </li>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=usernamehw.errorlens" target="_blank">Error Lens</a>
+            <span>-</span>Inline error messaging
          </li>
          <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=jakearl.search-editor-apply-changes" target="_blank">Search Editor Apply Changes</a>
