--- a/public/vscode-extensions.html
+++ b/public/vscode-extensions.html
@@ -96,7 +96,7 @@
             </a>
          </li>
          <li>
-            <a href="https://code.visualstudio.com/updates/v1_55#_timeline-view" target="_blank">
+            <a href="https://code.visualstudio.com/updates/v1_66#_local-history" target="_blank">
                Timeline for Jetbrains-like local history
             </a>
          </li>
