--- a/public/look-mom-i'm-online.html
+++ b/public/look-mom-i'm-online.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; url=https://docs.google.com/presentation/d/1Mryeme0OrQ0wr6kZ0MJD9D2DucrApD_4r8lHfow2quw/mobilepresent" />
+    <meta property="og:title" content="אמא אני באינטרנט" />
+    <meta property="og:description" content="נתנאל הבר 2025 ספידראן אתר אינטרנט מהניינטיז תוך 10 דקות" />
+    <meta property="og:image" content="https://docs.google.com/presentation/d/1Mryeme0OrQ0wr6kZ0MJD9D2DucrApD_4r8lHfow2quw/export/thumbnail?id=1Mryeme0OrQ0wr6kZ0MJD9D2DucrApD_4r8lHfow2quw&slide=id.p" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://netanel.dev/look-mom-i'm-online" />
+    <meta http-equiv="refresh" content="2; url=https://docs.google.com/presentation/d/1Mryeme0OrQ0wr6kZ0MJD9D2DucrApD_4r8lHfow2quw/mobilepresent?usp=embed_facebook" />
   </head>
   <body></body>
 </html>
