--- a/public/look-mom-i'm-online.html
+++ b/public/look-mom-i'm-online.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
     <meta property="og:title" content="אמא אני באינטרנט" />
     <meta property="og:description" content="נתנאל הבר 2025 ספידראן אתר אינטרנט מהניינטיז תוך 10 דקות" />
-    <meta property="og:image" content="https://docs.google.com/presentation/d/1Mryeme0OrQ0wr6kZ0MJD9D2DucrApD_4r8lHfow2quw/export/thumbnail?id=1Mryeme0OrQ0wr6kZ0MJD9D2DucrApD_4r8lHfow2quw&slide=id.p" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://netanel.dev/look-mom-i'm-online" />
-    <meta http-equiv="refresh" content="2; url=https://docs.google.com/presentation/d/1Mryeme0OrQ0wr6kZ0MJD9D2DucrApD_4r8lHfow2quw/mobilepresent?usp=embed_facebook" />
+    <meta property="og:url" content="https://netanel.dev/look-mom-i'm-online.html" />
+    <meta property="og:image" content="https://lh7-us.googleusercontent.com/docs/AHkbwyJaMbjTbIPFqzghyy1y8oEo7eYTRQwiu2KFTfbrLNrrNb3DPOBgyQqK0CI1-k2x4NqbaTsl043Dk-nYg2KtPpM8fy-KPnRGeqmG9g2dJTsQTdUDri0=w1200-h630-p" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <script>
+      setTimeout(() => {
+        location.href = "https://docs.google.com/presentation/d/1Mryeme0OrQ0wr6kZ0MJD9D2DucrApD_4r8lHfow2quw/mobilepresent?usp=embed_facebook";
+      }, 1500);
+    </script>
   </head>
   <body></body>
 </html>
