--- a/public/vscode-extensions.html
+++ b/public/vscode-extensions.html
@@ -101,7 +101,7 @@
             </a>
          </li>
          <li>
-            <a href="https://code.visualstudio.com/updates/v1_97#_no-config-debug" target="_blank">
+            <a href="https://github.com/microsoft/vscode-python-debugger/wiki/No%E2%80%90Config-Debugging" target="_blank">
                Python no-config debug from the terminal
             </a>
          </li>
