--- a/index.html
+++ b/index.html
@@ -155,5 +155,6 @@
         if (app) renderIframe(app.href, app.dataset.height);
       }
     </script>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "d9d9ea061ae34e91a9321e96e4094fcc"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
