Add link to Snakepath in index.html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     <main>
       <section id="buttons">
         <a
+          data-hash="snakepath"
+          href="https://snakepath.dev/"
+          data-height="750px"
+          aria-label="Snakepath"
+        >
+          <img src="https://snakepath.dev/assets/snakepath.png" alt="Snakepath" />
+        </a>
+        <a
           data-hash="dashdashhelp"
           href="https://dashdashhelp.win"
           data-height="500px"
