--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           data-height="750px"
           aria-label="Snakepath"
         >
-          <img src="https://snakepath.dev/assets/snakepath.png" alt="Snakepath" />
+          <img src="https://snakepath.dev/snakepath.png" alt="Snakepath" />
         </a>
         <a
           data-hash="dashdashhelp"
